# Compiler_Principle_Experiment

./: CMakeLists.txt  README.md  global.h  grammar.cpp  grammar.h  grammar_classifier.h  input_handle.cpp  input_handle.h  main.cpp
Compiler/: CMakeLists.txt
Compiler/res/: hello.c
Compiler/src/: main.cpp
Compiler/src/token/: scanner.cpp  scanner.h  token.cpp  token.h
Compiler/src/utils/: char_utils.h
GrammarClassifier/: CMakeLists.txt  README.md
GrammarClassifier/include/: global.h  grammar_classifier.h  input_handle.h
include/: global.h  grammar.h  grammar_classifier.h
src/: grammar.cpp  grammar_classifier.cpp  input_handle.cpp
